--- a/mon-backend/package.json
+++ b/mon-backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack --config webpack.config.js --mode production",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
