--- a/mon-backend/package.json
+++ b/mon-backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.js --mode production",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
@@ -24,7 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.1600.0",
