--- a/mon-backend/.env
+++ b/mon-backend/.env
@@ -7,7 +7,11 @@ DB_PORT=3307
 SARBACANE_ACCOUNT_ID=5f75cc3db95cee641869d507
 SARBACANE_API_KEY=NaehjdLrRgaLIpHpI4mwMA
 SARBACANE_EMAIL_API_KEY=485e51170c7d42bfb3ace003e55faf51
-
-
+EMAIL_SMTP=ssl0.ovh.net
+EMAIL_USER=support78@progedoc.fr
+EMAIL_PASS=DXAe2UTzkUR
 JWT_SECRET_KEY=ubyUVtl19kokuIklZZcA3qZDU3So+BwlfFPibHLNtRo=
+
+
+RECAPTCHA_SECRET_KEY=6Lc74fYpAAAAAEst4N6BAb6-BgJgKdIdjF9iFa4B
 
