--- a/mon-backend/package.json
+++ b/mon-backend/package.json
@@ -5,36 +5,28 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js --mode production",
-    "start": "node index.js"
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/recaptcha-enterprise": "^5.6.0",
     "axios": "^1.6.8",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "express-fileupload": "^1.5.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
     "mysql2": "^3.9.2",
-    "nodemailer": "^6.9.13",
-    "serverless-http": "^3.2.0"
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
-    "aws-sdk": "^2.1600.0",
     "html-loader": "^5.0.0",
-    "mock-aws-s3": "^4.0.2",
-    "nock": "^13.5.4",
-    "node-gyp": "^10.1.0",
-    "npm": "^10.5.2",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "nodemon": "^3.1.4",
+    "webpack": "^5.91.0"
   }
 }
